# canscope

./: .clang-format  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
cmake/: dependencies.cmake  lely.cmake  toolchain-aarch64.cmake
cmake/patches/: ftxui-empty-container.patch
docker/: Dockerfile  Dockerfile.cross  Dockerfile.dev  Dockerfile.sysroot
src/: bitstream.hpp  can_data.hpp  can_frame.cpp  can_player_dialog.cpp  canid_unit.cpp  canid_unit.hpp  cansettingsexportdialog.cpp  csv.cpp  discoverer.cpp  discoverer.hpp  filedialog.cpp  graph.cpp  headless.cpp  headless.hpp  headless_streamer.cpp  headless_streamer.hpp  j1939_db.cpp  j1939_db.hpp  main.cpp  mainform.cpp  parsers.cpp  parsers.hpp  recorder.cpp  recorder.hpp  signals.hpp  spnselector.cpp  tagsettingrow.cpp  tagsettingrow.hpp  tagsettings.hpp  tagsettingsform.cpp  tuple.hpp  types.hpp  utils.cpp  utils.hpp  xlsx.cpp
src/json/: button.cpp  button.hpp  expander.cpp  expander.hpp  json.cpp  json.hpp  mytoggle.cpp  mytoggle.hpp
